<resources>
    <string name="app_name">Rev2JP</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_settings">Settings</string>

    <!-- name for menu items-->
    <string name="About">About</string>
    <string name="exit">Exit</string>

    <!-- about dialogbox contents -->
    <string name="copyright">© 2024 Justin Peasley</string>
    <string name="describe">A game of revolution is a game of trying to unscramble a grid
        of scrambled numbers into ascending order. To do this you click on a button
        signifying the top left button of a 2x2 grid. You can then rotate them using
        the buttons underneath the grid on the left. The third button from the left is
        an undo button to restore to any previous move of the game. The button on the
        right is for starting a new game with your desired difficulty. Good Luck!
    </string>

    <!-- new_game dialog box contents -->
    <string name="enter_depth">Enter Solution Depth:</string>
    <string name="restartButtonDescription">Start a new game.</string>
    <!-- ^ also used as description of button-->

    <!-- content descriptions for ImageButtons -->
    <string name="rotateRight"> Rotate Right</string>
    <string name="rotateLeft"> Rotate Left</string>
    <string name="undoButtonDescription">Undo the last move.</string>

    <!-- toasts -->
    <string name="undo_fail">There are no moves to undo.</string>
    <string name="restart_fail">The game is already in the starting state.</string>
    <string name="win">You Win!!</string>
    <string name="invalid">invalid position</string>

</resources>