<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_secondary90"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <GridLayout
        android:id="@+id/mainGridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/grid_layout_margin_vertical"
        android:rowCount="3"
        android:columnCount="3"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mainLinearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/linear_layout_margin_vertical"
        app:layout_constraintTop_toBottomOf="@id/mainGridLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/mainLeftButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/backward"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:contentDescription="@string/rotateLeft"
            android:tooltipText="@string/rotateLeft"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/mainRightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forward"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:contentDescription="@string/rotateLeft"
            android:tooltipText="@string/rotateLeft"
            tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/mainUndoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/undo"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside"
        android:contentDescription="@string/undoButtonDescription"
        android:tooltipText="@string/undoButtonDescription"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/mainRestartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/restart"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside"
        android:contentDescription="@string/restartButtonDescription"
        android:tooltipText="@string/restartButtonDescription"
        tools:ignore="MissingConstraints" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>